<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="240dp"
    android:orientation="vertical"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp">

    <Spinner
        android:id="@+id/spinner_tipoVehiculo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <LinearLayout
        android:id="@+id/linearLayout_Placa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_Placa"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_Placa"
                style="@style/EstiloTextoContenido"
                android:hint="@string/text_hint_placa"
                android:inputType="textCapCharacters"
                android:maxLength="6" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView_SearchVehiculo"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_search"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Cilindraje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_Cilindraje"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.2">

            <EditText
                android:id="@+id/editText_Cilindraje"
                style="@style/EstiloTextoContenido"
                android:hint="@string/texto_hint_cilindraje"
                android:inputType="number"
                android:maxLength="5" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            style="@style/EstiloTextoContenido"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.2"
            android:gravity="center"
            android:text="@string/texto_siglas_centimetros_cubicos" />
    </LinearLayout>

    <Button
        android:layout_margin="5dp"
        android:id="@+id/button_IngresarNuevoVehiculo"
        android:textColor="@color/blanco"
        android:background="@color/celdaDisponible"
        android:text="@string/texto_guardar_boton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>