<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="320dp"
    android:layout_height="240dp"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp">

    <LinearLayout
        android:layout_gravity="center"
        android:id="@+id/linearLayout_Placa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_Placa"
            android:layout_width="0dp"
            android:layout_weight="0.8"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editText_Placa"
                style="@style/EstiloTextoContenido"
                android:hint="@string/text_hint_placa"
                android:inputType="textCapCharacters"
                android:maxLength="6" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/imageView_SearchVehiculo"
            android:layout_width="0dp"
            android:layout_weight="0.2"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@mipmap/ic_search"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_TipoVehiculo"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="start"
            android:id="@+id/textView_TipoVehiculo"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            style="@style/EstiloTextoContenido"
            android:layout_height="wrap_content" />

        <TextView
            android:gravity="end"
            android:id="@+id/textView_PlacaVehiculo"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Cilindraje"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            style="@style/EstiloTextoContenido"
            android:layout_height="wrap_content"
            android:text="@string/texto_hint_cilindraje"/>

        <TextView
            android:gravity="end"
            android:id="@+id/textView_Cilindraje"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_FechaIngreso"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            style="@style/EstiloTextoContenido"
            android:layout_height="wrap_content"
            android:text="@string/texto_fecha_ingreso"/>

        <TextView
            android:gravity="end"
            android:id="@+id/textView_FechaIngreso"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Total"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:gravity="start"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/texto_valor_total"/>

        <TextView
            android:gravity="end"
            android:id="@+id/textView_ValorTotal"
            style="@style/EstiloTextoContenido"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <Button
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:text="@string/texto_button_cobrar"
        android:id="@+id/button_Cobrar"
        android:textColor="@color/blanco"
        android:background="@color/azul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:text="@string/texto_button_salir"
        android:id="@+id/button_Salir"
        android:textColor="@color/blanco"
        android:background="@color/gris"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>